<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rv_kura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="4dp"

            android:src="@color/colorAccent"/>

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_toRightOf="@+id/img_item_photo"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"/>
            <TextView
                android:text="@string/nama_ilmiah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_ilmiah"/>
            <Button
                android:id="@+id/btn_set_favourite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>